[package]
name = "dynastyscans"
version = "0.1.0"
edition = "2024"

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs.git", version = "0.3.0", features = ["json"] }
serde = { version = "1.0.188", default-features = false, features = ["derive", "alloc"] }

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true